syntax = "proto3";

package panel;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/stroppy-cloud-panel/internal/proto/panel";

message Ulid {
    message List {
        repeated Ulid ulids = 1;
    }
    string id = 1 [(validate.rules).string.len = 26];
}

message Timing {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
    optional google.protobuf.Timestamp deleted_at = 3;
}

message Metadata {
    map<string, string> metadata = 1;
}

message KV {
    message Info {
        string description = 5 [(validate.rules).string.min_len = 1];
        optional string default_value = 6 [(validate.rules).string.min_len = 1];
        bool is_required = 7;
        bool immutable = 8;
        bool system_generated = 9;
    }
    message Map {
        repeated KV kvs = 1 [(validate.rules).repeated.min_items = 1];
    }
    string key = 1 [(validate.rules).string.min_len = 1];
    string value = 2 [(validate.rules).string.min_len = 1];
    optional Info info = 3;
}

message Tag {
    message List {
        repeated Tag tags = 1 [(validate.rules).repeated.min_items = 1];
    }
    string key = 1 [(validate.rules).string.min_len = 1];
    string value = 2 [(validate.rules).string.min_len = 1];
}

message LogRecord {
    bytes log_line = 1 [(validate.rules).bytes.min_len = 1];
}

message Retry {
    message Backoff {
        /* type ConstantBackOff
            func NewConstantBackOff(d time.Duration) *ConstantBackOff
         */
        message Constant {
            google.protobuf.Duration duration = 1 [(validate.rules).duration.gt = {seconds: 0}];
        }
        /* type ExponentialBackOffOpts
            func WithClockProvider(clock Clock) ExponentialBackOffOpts
            func WithInitialInterval(duration time.Duration) ExponentialBackOffOpts
            func WithMaxElapsedTime(duration time.Duration) ExponentialBackOffOpts
            func WithMaxInterval(duration time.Duration) ExponentialBackOffOpts
            func WithMultiplier(multiplier float64) ExponentialBackOffOpts
            func WithRandomizationFactor(randomizationFactor float64) ExponentialBackOffOpts
            func WithRetryStopDuration(duration time.Duration) ExponentialBackOffOpts
         */
        message Exponential {
            google.protobuf.Duration initial_interval = 1 [(validate.rules).duration.gt = {seconds: 0}];
            google.protobuf.Duration max_elapsed_time = 2 [(validate.rules).duration.gt = {seconds: 0}];
            google.protobuf.Duration max_interval = 3 [(validate.rules).duration.gt = {seconds: 0}];
            double multiplier = 5 [(validate.rules).float.gt = 0];
            double randomization_factor = 6 [(validate.rules).float.gt = 0];
            google.protobuf.Duration retry_stop_duration = 4 [(validate.rules).duration.gt = {seconds: 0}];

        }
        oneof backoff {
            Constant constant = 1;
            Exponential exponential = 2;
        }
    }
    message State {
        google.protobuf.Duration backoff_duration = 1 [(validate.rules).duration.gt = {seconds: 0}];
        google.protobuf.Timestamp backoff_value = 2 [(validate.rules).timestamp.gt = {seconds: 0}];
        uint32 attempt = 3 [(validate.rules).uint32.gt = 0];
    }
    uint32 max_attempts = 2 [(validate.rules).uint32.gt = 0];
    Backoff backoff = 3;
}

message Tps {
    message Order {
        enum ParameterType {
            TYPE_AVERAGE = 0;
            TYPE_MAX = 1;
            TYPE_MIN = 2;
            TYPE_P95TH = 3;
            TYPE_P99TH = 4;
        }
        ParameterType parameter_type = 1 [(validate.rules).enum.defined_only = true];
        bool descending = 2;
    }
    uint64 average = 1;
    uint64 max = 2;
    uint64 min = 3;
    uint64 p95th = 4;
    uint64 p99th = 5;
}
